RESOLVED FIXED33916
openDatabase should throw exception if database access is disallowed
https://bugs.webkit.org/show_bug.cgi?id=33916
Summary openDatabase should throw exception if database access is disallowed
Eric U.
Reported 2010-01-20 12:33:00 PST
From the spec [http://dev.w3.org/html5/webdatabase/ section 4.1.1]: "The user agent may raise a SECURITY_ERR exception instead of returning a Database object if the request violates a policy decision (e.g. if the user agent is configured to not allow the page to open databases)." We're just returning null, which isn't an option offered by the specification. The current behavior is enforced by LayoutTests/fast/frames/sandboxed-iframe-storage.html.
Attachments
patch (2.04 KB, patch)
2010-04-08 13:19 PDT, Dumitru Daniliuc
dglazkov: review+
dumi: commit-queue-
Dumitru Daniliuc
Comment 1 2010-04-08 13:19:11 PDT
Dimitri Glazkov (Google)
Comment 2 2010-04-08 13:25:06 PDT
Comment on attachment 52889 [details] patch ok. Can you reference a layout test that enforces it?
Patrik Persson
Comment 3 2010-04-09 00:02:33 PDT
(In reply to comment #3) > From the spec [http://dev.w3.org/html5/webdatabase/ section 4.1.1]: "The user > agent may raise a SECURITY_ERR exception instead of returning a Database object > if the request violates a policy decision (e.g. if the user agent is configured > to not allow the page to open databases)." We're just returning null, which > isn't an option offered by the specification. > > The current behavior is enforced by > LayoutTests/fast/frames/sandboxed-iframe-storage.html. FYI: that particular layout test was revised in bug 32369. However, that change was specific to sandboxed iframes. Other database policy decisions were not addressed by bug 32369.
Dumitru Daniliuc
Comment 4 2010-04-12 17:26:18 PDT
Do we have a way to turn on/off DB support in tests? If not, then I'm not sure how to write a test for this patch, because DB support is enabled by default.
Dumitru Daniliuc
Comment 5 2010-04-12 18:08:42 PDT
Landed as r57492.
WebKit Review Bot
Comment 6 2010-04-12 18:35:38 PDT
http://trac.webkit.org/changeset/57492 might have broken SnowLeopard Intel Release (Tests)
Dumitru Daniliuc
Comment 7 2010-04-12 19:59:24 PDT
(In reply to comment #6) > http://trac.webkit.org/changeset/57492 might have broken SnowLeopard Intel > Release (Tests) Fixed storage/open-database-over-quota.html in r57493.
Note You need to log in before you can comment on or make changes to this bug.