Throwing a SECURITY_ERR when openDatabase() cannot open a database for whatever reason, as required by the spec. https://bugs.webkit.org/show_bug.cgi?id=33916

Reviewed by Dimitri Glazkov.

* bindings/js/JSDOMWindowCustom.cpp:
(WebCore::JSDOMWindow::openDatabase):
* bindings/v8/custom/V8DOMWindowCustom.cpp:
(WebCore::V8DOMWindow::openDatabaseCallback):



Canonical link: https://commits.webkit.org/48780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57492 268f45cc-cd09-0410-ab3c-d52691b4dbfc